--- a/Романова/Задание 2/index.html
+++ b/Романова/Задание 2/index.html
@@ -28,14 +28,15 @@
         <div class="main">
             <h3 class="second_header"><a href="ссылка"></a>About us</h3>
             <p class="text"><a href="ссылка"></a>The occupational traffic permit is one of the most<br>
-                                    important things in the company when carrying out<br>
-                                    freight transport. In fact, it is a prerequisite for doing<br>
-                                    business traffic at all.</p>
+                                                 important things in the company when carrying out<br>
+                                                 freight transport. In fact, it is a prerequisite for doing<br>
+                                                 business traffic at all.</p>
             <img src="img/Group 40.png">
-
             <h4 class="question"><a href="ссылка"></a>How do you do when you need to obtain<br>
-                                    a commercial traffic permit for freight<br>
-                                    transport to your business?</h4>
+                                                      a commercial traffic permit for freight<br>
+                                                      transport to your business?</h4>
+        </div>
+        <div class="main 1">                                        
             <h3 class="second_header"><a href="ссылка"></a>How to apply</h3>
             <img src="img/illustrations.png">
             <p class="text"><a href="ссылка"></a>When applying for a traffic permit, there are certain<br>
@@ -45,30 +46,65 @@
                                                  financial resources. Important to remember is to confirm<br>
                                                  your application for a traffic permit by the company's<br>
                                                  company signer or CEO.</p>
+        </div>
+        <div class="main 2">
             <h3 class="second_header"><a href="ссылка"></a>Faq</h3>
             <h2 class="words"><a href="ссылка"></a>Questions and Answers<br>
-                                              on Professional Traffic<br>
-                                              Permits:</h2>
+                                                   on Professional Traffic<br>
+                                                   Permits:</h2>
             <img src="img/Group 14.png">
-            
-
-
-
-
-
-
-
-
+            <img src="img/Rectangle 9.png">
+            <button>-</button>
+            <h5 class="question 2"><a href="ссылка"></a>What is a professional traffic permit?</h5>
+            <img src="img/Rectangle 8.png">
+            <p class="text"><a href="ссылка"></a>Traffic permits are a requirement for conducting<br>
+                                                 professional traffic.</p>
+            <img src="img/Rectangle 9.png">
+            <button>+</button>
+            <h5 class="question 2"><a href="ссылка"></a>How to check the traffic condition?</h5>
+            <img src="img/Rectangle 9.png">
+            <button>+</button>
+            <h5 class="question 2"><a href="ссылка"></a>What are the requirements for a professional<br>
+                                                        traffic permit?</h5>
+            <img src="img/Rectangle 9.png">
+            <button>+</button>
+            <h5 class="question 2"><a href="ссылка"></a>Are there professional traffic permit training<br>
+                                                        courses at a distance?</h5>          
+            <img src="img/Rectangle 9.png">
+            <button>+</button>
+            <h5 class="question 2"><a href="ссылка"></a>When is a professional traffic permit needed?</h5>
+            <img src="img/Rectangle 9.png">
+            <button>+</button>
+            <h5 class="question 2"><a href="ссылка"></a>Where to look for a traffic permit?</h5>
+            <img src="img/Rectangle 9.png">
+            <button>+</button>
+            <h5 class="question 2"><a href="ссылка"></a>Are there differences between a traffic permit<br>
+                                                        and a professional traffic permit?</h5>
+            <img src="img/Rectangle 9.png">
+            <button>+</button>
+            <h5 class="question 2"><a href="ссылка"></a>How much does a commercial traffic permit<br>
+                                                        cost for goods?</h5>
+            <img src="img/Rectangle 9.png">
+            <button>+</button>
+            <h5 class="question 2"><a href="ссылка"></a>How to plug in for the traffic permit test?</h5>
+            <img src="img/Rectangle 9.png">
+            <button>+</button>
+            <h5 class="question 2"><a href="ссылка"></a>How is the sample for a professional traffic<br>
+                                                        permit booked?</h5>
+            <img src="img/Rectangle 15.png">
+            <button>+</button>
+            <p class="text 2"><a href="ссылка"></a>LOAD MORE</p>
+        </div>
+        <div class="main 3">
             <h3 class="second_header"><a href="ссылка"></a>About us</h3>
             <h2 class="words"><a href="ссылка"></a>Out Awesome<br>
-                                              Clients</h2>
+                                                   Clients</h2>
             <button>←</button>
             <button>→</button>
             <img src="img/Rectangle 6.png">
             <img src="img/Ellipse 9.png">
             <img src="img/Rectangle 6.png">
             <img src="img/Ellipse 9 (1).png">
-
         </div>
         <div class="footer">
             <img src="img/Group 35.png">
@@ -76,7 +112,7 @@
             <p class="text"><a href="ссылка"></a>We provide traffic management<br>
                                                  consultants so you get started<br>
                                                  quickly, contact us for a quote<br>
-                                                today!</p>
+                                                 today!</p>
             <img src="img/Vector 13.png">
             <img src="img/Rectangle 5.png">
             <p class="text"><a href="ссылка"></a>Name</p>
@@ -85,7 +121,6 @@
             <img src="img/Rectangle 7.png">
             <button>Get started →</button>
         </div>
-
     </div>
     
 </body>
