--- a/Романова/Задание 2/index.html
+++ b/Романова/Задание 2/index.html
@@ -120,6 +120,9 @@
             <p class="text"><a href="ссылка"></a>Email</p>
             <img src="img/Rectangle 7.png">
             <button>Get started →</button>
+            <p><a href="ссылка"></a>About</p>
+            <p><a href="ссылка"></a>How to</p>
+            <p><a href="ссылка"></a>Faqs</p>
         </div>
     </div>
     
