--- a/Романова/Задание 2/index.html
+++ b/Романова/Задание 2/index.html
@@ -18,6 +18,7 @@
                 <button>Contact us</button>
             </div>
             <h1 class="main_header">
+                <img src="img/Mask Group.png">
                 Your awesome<br>
                 trafiic permit<br>
                 consultant</h1>
@@ -52,45 +53,47 @@
             <h2 class="words"><a href="ссылка"></a>Questions and Answers<br>
                                                    on Professional Traffic<br>
                                                    Permits:</h2>
-            <img src="img/Group 14.png">
-            <img src="img/Rectangle 9.png">
-            <button>-</button>
-            <h5 class="question 2"><a href="ссылка"></a>What is a professional traffic permit?</h5>
-            <img src="img/Rectangle 8.png">
-            <p class="text"><a href="ссылка"></a>Traffic permits are a requirement for conducting<br>
-                                                 professional traffic.</p>
-            <img src="img/Rectangle 9.png">
-            <button>+</button>
-            <h5 class="question 2"><a href="ссылка"></a>How to check the traffic condition?</h5>
-            <img src="img/Rectangle 9.png">
-            <button>+</button>
-            <h5 class="question 2"><a href="ссылка"></a>What are the requirements for a professional<br>
-                                                        traffic permit?</h5>
-            <img src="img/Rectangle 9.png">
-            <button>+</button>
-            <h5 class="question 2"><a href="ссылка"></a>Are there professional traffic permit training<br>
-                                                        courses at a distance?</h5>          
-            <img src="img/Rectangle 9.png">
-            <button>+</button>
-            <h5 class="question 2"><a href="ссылка"></a>When is a professional traffic permit needed?</h5>
-            <img src="img/Rectangle 9.png">
-            <button>+</button>
-            <h5 class="question 2"><a href="ссылка"></a>Where to look for a traffic permit?</h5>
-            <img src="img/Rectangle 9.png">
-            <button>+</button>
-            <h5 class="question 2"><a href="ссылка"></a>Are there differences between a traffic permit<br>
-                                                        and a professional traffic permit?</h5>
-            <img src="img/Rectangle 9.png">
-            <button>+</button>
-            <h5 class="question 2"><a href="ссылка"></a>How much does a commercial traffic permit<br>
-                                                        cost for goods?</h5>
-            <img src="img/Rectangle 9.png">
-            <button>+</button>
-            <h5 class="question 2"><a href="ссылка"></a>How to plug in for the traffic permit test?</h5>
-            <img src="img/Rectangle 9.png">
-            <button>+</button>
-            <h5 class="question 2"><a href="ссылка"></a>How is the sample for a professional traffic<br>
-                                                        permit booked?</h5>
+            <div class="main2_2">                                       
+                <img src="img/Group 14.png">
+                <img src="img/Rectangle 9.png">
+                <button>-</button>
+                <h5 class="question 2"><a href="ссылка"></a>What is a professional traffic permit?</h5>
+                <img src="img/Rectangle 8.png">
+                <p class="text"><a href="ссылка"></a>Traffic permits are a requirement for conducting<br>
+                                                    professional traffic.</p>
+                <img src="img/Rectangle 9.png">
+                <button>+</button>
+                <h5 class="question 2"><a href="ссылка"></a>How to check the traffic condition?</h5>
+                <img src="img/Rectangle 9.png">
+                <button>+</button>
+                <h5 class="question 2"><a href="ссылка"></a>What are the requirements for a professional<br>
+                                                            traffic permit?</h5>
+                <img src="img/Rectangle 9.png">
+                <button>+</button>
+                <h5 class="question 2"><a href="ссылка"></a>Are there professional traffic permit training<br>
+                                                            courses at a distance?</h5>          
+                <img src="img/Rectangle 9.png">
+                <button>+</button>
+                <h5 class="question 2"><a href="ссылка"></a>When is a professional traffic permit needed?</h5>
+                <img src="img/Rectangle 9.png">
+                <button>+</button>
+                <h5 class="question 2"><a href="ссылка"></a>Where to look for a traffic permit?</h5>
+                <img src="img/Rectangle 9.png">
+                <button>+</button>
+                <h5 class="question 2"><a href="ссылка"></a>Are there differences between a traffic permit<br>
+                                                            and a professional traffic permit?</h5>
+                <img src="img/Rectangle 9.png">
+                <button>+</button>
+                <h5 class="question 2"><a href="ссылка"></a>How much does a commercial traffic permit<br>
+                                                            cost for goods?</h5>
+                <img src="img/Rectangle 9.png">
+                <button>+</button>
+                <h5 class="question 2"><a href="ссылка"></a>How to plug in for the traffic permit test?</h5>
+                <img src="img/Rectangle 9.png">
+                <button>+</button>
+                <h5 class="question 2"><a href="ссылка"></a>How is the sample for a professional traffic<br>
+                                                            permit booked?</h5>
+            </div>
             <img src="img/Rectangle 15.png">
             <button>+</button>
             <p class="text 2"><a href="ссылка"></a>LOAD MORE</p>
@@ -102,8 +105,17 @@
             <button>←</button>
             <button>→</button>
             <img src="img/Rectangle 6.png">
+            <p><a href="ссылка"></a>Yes, you will need to have the land owner<br>
+                                    sign the permit application as the Permittee,<br>
+                                    and you sign the permit as the Applicant or<br>
+                                    Agent for the Permittee.</p>
             <img src="img/Ellipse 9.png">
             <img src="img/Rectangle 6.png">
+            <p><a href="ссылка"></a>From most barricade or traffic control<br>
+                                    companies located in the phone book. They<br>
+                                    employ certified Traffic Control Supervisors<br>
+                                    (TCS) who can generate and certify the<br>
+                                    traffic control plan.</p>
             <img src="img/Ellipse 9 (1).png">
         </div>
         <div class="footer">
@@ -113,18 +125,21 @@
                                                  consultants so you get started<br>
                                                  quickly, contact us for a quote<br>
                                                  today!</p>
-            <img src="img/Vector 13.png">
+            <img src="img/Group 41.png">
             <img src="img/Rectangle 5.png">
-            <p class="text"><a href="ссылка"></a>Name</p>
-            <img src="img/Rectangle 6 (1).png">
-            <p class="text"><a href="ссылка"></a>Email</p>
-            <img src="img/Rectangle 7.png">
+            <p><b>Name</b><br>
+                <input type="Your name" size="40">
+            <p><b>Email</b><br>
+                <input type="Your Email" size="40">
             <button>Get started →</button>
+            <img src="img/logo.png">
             <p><a href="ссылка"></a>About</p>
             <p><a href="ссылка"></a>How to</p>
             <p><a href="ссылка"></a>Faqs</p>
+            <img src="img/f.png">
+            <img src="img/t.png">
+            <img src="img/i.png">
         </div>
-    </div>
-    
+    </div>  
 </body>
 </html>
