--- a/Слывка/Задание 2/index.html
+++ b/Слывка/Задание 2/index.html
@@ -5,31 +5,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trafico</title>
-    <style>
-        a {
-            text-decoration: none;
-        }
-    </style>
 </head>
 <body>
     <div class="container"> 
 
-        <div class="header">
-            <div class="contact_menu">
-                <a class="logo">TRAFICO.</a>
-                <a class="about">ABOUT</a>
-                <a class="how to">HOW TO</a>
-                <a class="faqs">FAQS</a>
-                <a class="btn" href="#" >CONTACT US</a>
+        <header class="header">
+            <div class="wrapper">
+                 <div class="header_wrapper">
+                    <div class="header_logo">
+                        <a href="/" class="header_logo_link">
+                            <img src="img/svg/logo.svg" alt="Trafico">
+                        </a>
+                    </div>
+    
+                    <nav class="header_nav">
+                        <ul class="header_list">
+                            <li class="header_item">
+                                <a href="#!" class="header_link">ABOUT</a>
+                            </li>
+                            <li class="header_item">
+                                <a href="#!" class="header_link">HOW TO</a>
+                            </li>
+                            <li class="header_item">
+                                <a href="#!" class="header_link">FAQS</a>
+                            </li>
+                            <a href="#!" class="header_link_btn">CONTACT US</a> 
+                        </ul>
+                    </nav>
+                </div>
             </div>
-        </div>
 
-        <div class="header_content">
-            <h1>Your awesome <br> traffic permit <br> consultant.</h1>
-            <a class="btn_start" >GET STARTED</a>
-        </div>
+        </header>
 
         <div class="main">
+            <section class="intro">
+                <div class="wrapper">
+                    <h1 class="intro_title">
+                        Your awesome traffic permit consultant.
+                    </h1>
+                    <div class="intro_btn">
+                        <img src="../Задание 2/img/svg/arrow.svg">
+                         <p>GET STARTED</p> 
+                    </div>
+                </div>
+            </section>
             <div class="about_us">
                 <span class="heading">ABOUT US</span>
                 <p>The occupational traffic permit is one of the most important things in the company when carrying out freight transport. In fact, it is a prerequisite for doing business traffic at all.</p>
@@ -116,11 +135,11 @@
                     <div class="social_icons">
                         <a class="facebook">facebook</a>
                         <a class="twitter">twitter</a>
-                        <a class="intagram">instagram</a>
+                        <a class="intagram">instagram</a
                     </div>
 
         </div>
-    </div>
+    </div> 
     
 </body>
 </html>
