--- a/Задание 2/index.html
+++ b/Задание 2/index.html
@@ -12,19 +12,10 @@
     <a href="#" class="header_logo">Gravity</a> 
     <a href="#" class="header_src"></a><img src="img/Search Icon.png"></a>
     <a href="#" class="header_menu"><img src="img/Menu Icon.png"></a>
-
-
   </header>
-    <!-- <div class="container">
-    <div class="header">
-    <div class="search engine"> -->
-    <!-- <div class="container"></div>
-    <div class="header"></div>
-    <div class="search_engine"></div>
-    <a href="" class="icon_search"></a>
-    <a href="" class="gravity"></a>
+    
 
-    <div class="header_content">
+    <div class="main_text">
       <span class="title_text"></span>
       <h1>Work around you<br />and your team</h1>
       <p>
@@ -32,10 +23,23 @@
         are now using a new type of technology “rich media” to attract consumers
       </p>
       <button>GET STARTED</button>
-      <img src="img/Placeholder.png" />
+    </div>
+      <div class="loader(1)">
+        <a href="#"><img src="img/Loader (1).png"></a>
+      </div>
+    <div class="main_photo">
       <img src="img/Placeholder (1).png">
-    <div>
-      <img src="img/21.png"> 
+    </div >
+    <div class="center_photo">
+    </div>
+    <img src="img/Placeholder.png" />
+    <div class="video">
+      <img src="img/Rectangle.png"/>
+    </div class="video">
+    <div class="wallpaller"><img src="img/21.png">
+    </div>
+    <div class="text2">
+     
       <h1>
         We solve digital problems with<br />
         an outstanding creative flare
@@ -51,32 +55,42 @@
         magnificent displays in the heavens.
       </a>
     </div>
-      <div class="author">Denis Shepovalov</div>
+      <div class="comment">
+       <h1> Denis Shepovalov</h1>
+     <img src="img/Ellipse.png">
+      <p>Co-Founder&CEO</p>
+      </div>
 
-      <p><img src="img/Ellipse.png"</p>
-      <h1>Co-Founder&CEO</h1>
-      <p><img src="img/amg.jfif" alt="Пример обоя" /></p>
-      <a href="" class="services">Services</a>
+    <p>
+      <div class="text3">
       <p>
         We love work hard and explore <br />new things that's why we cover<br />lot
         of things.check our service<br />list and view details
       </p>
-      <a href="" class="Multimedia">Multimedia</a>
-      <a href="" class="Creative Strategy">Creative Strategy</a>
-      <a href="" class="Interactive design">Interactive design</a>
-      <a href="" class="UI/UX">UI/UX</a>
-      <a href="" class="Packaging">Packaging</a>
-      <a href="" class="Coding">Coding</a>
-      <a href="" class="Branding">Branding</a>
-      <p><img src="img/Placeholder (2).png" /></p>
-      <p><img src="img/Polygon.png" /></p>
-      <p><img src="img/Paceholder.png" /></p>
-      <a href="" class="left"></a>
-      <a href="" class="right"></a>
+    </div>
+      <a href="#"class="Multimedia">Multimedia</a>
+      <a href="#" class="Creative_Strategy">Creative Strategy</a>
+      <a href="#" class="Interactive design">Interactive design</a>
+      <a href="#" class="UI/UX">UI/UX</a>
+      <a href="#" class="Packaging">Packaging</a>
+      <a href="#" class="Coding">Coding</a>
+      <a href="#" class="Branding">Branding</a>
+      <div class="video2">
+      <img src="img/Placeholder (2).png" /></p>
+      </div>
+      <div class="logo_video2">
+      <img src="img/Polygon.png" />
+      </div>
+      <div class="wallpaller2"></div>
+      <img src="img/Paceholder.png" />
+      <a href="#" class="left"><img src="img/Arrow left.png"></a>
+      <a href="#" class="right"><img src="img/Arrow right.png"></a>
+      <div class="text3">
       <h1>
         Well thought with super<br />
         easy to use
       </h1>
+      </div>
       <p>
         As we approached the palace I could see through the<br />
         great windows of the first floor the brilliantly illuminated<br />
