--- a/Слывка/Задание 2/index.html
+++ b/Слывка/Задание 2/index.html
@@ -48,7 +48,7 @@
                          <p>GET STARTED</p> 
                     </div>
                         <div class="about_us">
-                            <span class="heading">ABOUT US</span>
+                            <span class="heading_about_us">ABOUT US</span>
                                 <p class="heading_text">The occupational traffic permit is one of the most important things in the company when carrying out freight transport. In fact, it is a prerequisite for doing business traffic at all.</p>
                                     <div class="about_us_question_bg">
                                         <img src="img/question_bg.jpg" alt="bg_question">
@@ -56,7 +56,7 @@
                                     </div>
                         </div>
                     <div class="how_to_apply">
-                        <span class="heading">HOW TO APPLY</span>
+                        <span class="heading_how_to_apply">HOW TO APPLY</span>
                         <p class="how_to_apply_text">When applying for a traffic permit, there are certain requirements that you must meet that are included in the examination: requirements for professional knowledge, solid establishment, good reputation and financial resources. Important to remember is to confirm your application for a traffic permit by the company's company signer or CEO.</p>
                     </div>
                 </div>
