--- a/Слывка/Задание 2/index.html
+++ b/Слывка/Задание 2/index.html
@@ -34,7 +34,6 @@
                     </nav>
                 </div>
             </div>
-
         </header>
 
         <div class="main">
@@ -62,15 +61,20 @@
                 </div>
             </section>
 
-             
-            
-            <!--<div class="faq">
-                <span class="heading">FAQ</span>
-                <h2>Questions and Answers <br> on Professional Traffic <br> Permits:</h2>
-                    <div class="questions">
-                        <button class="btn_guestion" onclick="myFunction()"> What is a professional traffic permit? </button>
-                        <div id="answer">Traffic permits are a requirement for conducting professional traffic.</div> 
-                            <script>
+            <div class="faq">
+                <div class="faq_text">
+                    <span class="faq_heading">FAQ</span>
+                    <div class="faq_rectangle"></div>
+                    <h2 class="faq_text2">Questions and Answers <br> on Professional Traffic <br> Permits:</h2>
+                </div>
+            </div>
+
+            <div class="questions_1">
+                <button class="btn_question" onclick="myFunction()"> What is a professional traffic permit? </button>
+                    <div 
+                        id="answer">Traffic permits are a requirement for conducting professional traffic. 
+                    </div> 
+                        <script>
                             function myFunction() {
                                 var x = document.getElementById("answer");
                                     if (x.style.display === "none") {
@@ -79,23 +83,24 @@
                                         x.style.display = "none";
                                     }
                                 }
-                            </script>
-                        <button class="btn_guestion" onclick="myFunction()"> When is a professional traffic permit needed? </button>
-                        <button class="btn_guestion" onclick="myFunction()"> How to check the traffic condition? </button>
-                        <button class="btn_guestion" onclick="myFunction()"> Where to look for a traffic permit? </button>
-                        <button class="btn_guestion" onclick="myFunction()"> Are there differences between a traffic permit and a professional traffic permit? </button>
-                        <button class="btn_guestion" onclick="myFunction()"> What are the requirements for a professional traffic permit? </button>
-                        <button class="btn_guestion" onclick="myFunction()"> How much does a commercial traffic permit cost for goods? </button>
-                        <button class="btn_guestion" onclick="myFunction()"> How to plug in for the traffic permit test? </button>
-                        <button class="btn_guestion" onclick="myFunction()"> Are there professional traffic permit training courses at a distance? </button>
-                        <button class="btn_guestion" onclick="myFunction()"> How is the sample for a professional traffic permit booked? </button>
-                        <a class="load_more">LOAD MORE</a>
-                    </div>
+                        </script>
+                <button class="btn_question" onclick="myFunction()"> How to check the traffic condition? </button> 
+                <button class="btn_question" onclick="myFunction()"> What are the requirements for a professional traffic permit? </button>
+                <button class="btn_question" onclick="myFunction()"> Are there professional traffic permit training courses at a distance? </button>
             </div>
-            <div class="about_us_feedback"> 
+            <div class="questions_2">
+                <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> When is a professional traffic permit needed?</button>
+                <button class="btn_question" onclick="myFunction()"> <img src="/Задание 2/img/svg/plus.svg"> Where to look for a traffic permit? </button>
+                <button class="btn_question" onclick="myFunction()"> Are there differences between a traffic permit and a professional traffic permit? </button>
+                <button class="btn_question" onclick="myFunction()"> How much does a commercial traffic permit cost for goods? </button>
+                <button class="btn_question" onclick="myFunction()"> How to plug in for the traffic permit test? </button>
+                <button class="btn_question" onclick="myFunction()"> How is the sample for a professional traffic permit booked? </button>
+                <a class="load_more" onclick="myFunction()">LOAD MORE</a>
+            </div>
+            <!-- <div class="about_us_feedback"> 
                 <span class="heading">ABOUT US</span>
                 <h2>Out Awesome Clients</h2>
-                <button class="navigation_buttons"></button> ы
+                <button class="navigation_buttons"></button>
                     <div class="feedback_1"> 
                         <p>Yes, you will need to have the land owner <br> sign the permit application as the Permittee, <br> and you sign the permit as the Applicant or <br> Agent for the Permittee.</p>
                         <img src="#" alt="avatar" style="width:30px">
